--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
+    "form-data": "^3.0.1",
+    "got": "^11.8.3",
     "graphql": "^15.7.2",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
@@ -39,7 +41,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.40"
+    "typeorm": "^0.2.40",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
