--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -30,11 +31,15 @@
     "@types/jsonwebtoken": "^8.5.6",
     "apollo-server-express": "^3.5.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "form-data": "^3.0.1",
     "got": "^11.8.3",
     "graphql": "^15.7.2",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-transport-ws": "^1.9.0",
+    "graphql-ws": "^5.6.4",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
