--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^1.0.2",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
     "@types/jsonwebtoken": "^8.5.6",
     "apollo-server-express": "^3.5.0",
@@ -58,6 +59,7 @@
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
